src/stylesheets/components/esper/_error.scss
//
// Esper panel
// --------------------------------------------------

.esper-error {
  position: absolute;
  inset: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  .esper.compact & {
    display: none;
  }

  .overlay-mode & {
    padding-top: $toolbar-height;
  }

  .panel-visible & {
    .stacked & {
      right: $esper-panel-width;
    }

    .side-by-side & {
      bottom: $esper-panel-height;
    }
  }

  .icon {
    opacity: 0.5;
    margin-top: -6px - 8px;
  }

  p {
    font-size: 18px;
    color: $esper-error-color;
    opacity: 0.5;
    margin: (20px - 12px) 0 ($line-height-large - 4px);
  }
}

